@@ -8,6 +8,12 @@ attr = !known_failing
 
 [build_ext]
 undef = NO_UNIQUE_RC
+# libraries = z,bz2
+## if using system libraries
+include-dirs = lib:lib/zlib:lib/bzip2
+# include-dirs = lib
+## if using system libraries
+
 # define = NDEBUG
 # is not needed for most Linux installs
 # see the OPT line in /usr/lib/python2.7/config/Makefile which gets included
